@startuml

entity User{
    * id varchar(100) <<PK>>
    --
    * name varchar(100) 
}

entity Notification{
    * id INT AUTO_INCREMENT <<PK>>
    --
    * title VARCHAR(255)
    * detail TEXT
    * create_at TIMESTAMP
    --
    user_id VARCHAR(255) <<FK>>
    category_id varchar(100) <<FK>>
}


entity Category{
    * id varchar(100)<<PK>>
    --
    * name varchar(100)
}

entity NotificationRead{
    * id int AUTO_INCREMENT <<PK>>
    --
    * is_read BOOLEAN
    -- 
    * Notification_id int <<FK>>
    * user_id varchar(100) <<FK>>
}


User ||--o{ "Notification"
Category ||--o{ "Notification"
Notification ||--o{NotificationRead
User ||--o{NotificationRead
@enduml